# Atelier_CMAKE

./: CMakeLists.txt
.github/workflows/: tests.yml
include/: CMakeLists.txt
src/: main.c
